// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mass-actions-panel Renders \`mass-actions-panel\` with actions correctly on the mobile size 1`] = `
<div
  class="layout"
>
  <div
    class="v-menu"
  >
    <!---->
  </div>
  <button
    class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
    type="button"
  >
    <span
      class="v-btn__content"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light"
      >
        more_vert
      </i>
    </span>
  </button>
</div>
`;

exports[`mass-actions-panel Renders \`mass-actions-panel\` with actions correctly on the mobile size 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active "
  role="menu"
  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 8;"
>
  <c-list-stub
    item-text="title"
    item-value="title"
    items="[object Object],[object Object]"
    return-object=""
  />
</div>
`;

exports[`mass-actions-panel Renders \`mass-actions-panel\` with actions correctly on the tablet size 1`] = `
<div
  class="layout"
>
  <div
    class="v-menu"
  >
    <!---->
  </div>
  <button
    class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
    type="button"
  >
    <span
      class="v-btn__content"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light"
      >
        more_vert
      </i>
    </span>
  </button>
</div>
`;

exports[`mass-actions-panel Renders \`mass-actions-panel\` with actions correctly on the tablet size 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active "
  role="menu"
  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 8;"
>
  <c-list-stub
    item-text="title"
    item-value="title"
    items="[object Object],[object Object]"
    return-object=""
  />
</div>
`;

exports[`mass-actions-panel Renders \`mass-actions-panel\` with actions on the large size 1`] = `
<div
  class="layout"
>
  <c-action-btn-stub
    color="primary"
    icon="edit"
    tooltip="Edit title"
  />
  <c-action-btn-stub
    color="secondary"
    icon="delete"
    tooltip="Delete title"
  />
  <div
    class="v-menu"
  >
    <!---->
  </div>
  <button
    class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
    type="button"
  >
    <span
      class="v-btn__content"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light"
      >
        more_vert
      </i>
    </span>
  </button>
</div>
`;
